Fixed Block Collapse Issue

--- a/src/languages/pyret/style.less
+++ b/src/languages/pyret/style.less
@@ -1,11 +1,5 @@
     // Import the default style, using the parameters set below.
     // Yes, the parameters below here really get passed into the style file imported above them.
-@import "../../less/default-style.less";
-
-.primitives-box {
-    margin-top: 100px;
-}
-
 .theme-default{
     @import "./style-selection/style/default.less";
 }
@@ -20,4 +14,12 @@
 
 .theme-inverse{
     @import "./style-selection/style/inverse.less";
+}
+
+.blocks-language-pyret {
+    @import "../../less/default-style.less";
+}
+
+.primitives-box {
+    margin-top: 100px;
 }
